<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
	
		<string name="app_name">Locaroid</string>
		<string name="exit">Exit</string>
		<string name="Normal">Normal</string>
		<string name="Satellite">Satellite</string>
		<string name="action_settings">Settings</string>
		<string name="gsignout">Signout</string>
		<string name="hello_world">Hello world!</string>
		<string name="Username">Username</string>
		<string name="Password">Password</string>
		<string name="mobile_num">Mobile Number</string>
		<string name="creds">Credits</string>
		<string name="banner_ad_unit_id">ca-app-pub-4083824684818051/6336133722</string>
		
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
		<string name="LoginGet">Login - Get</string>
		<string name="LoginPost">Login - Post</string>
		<string name="App">Login Application</string>
		<string name="LoginStatus">Login Status</string>
		<string name="LoginRole">Login Role</string>
		<string name="Status">Not login</string>
		<string name="Role">Not assigned</string>
		<string name="hybrid">Hybrid</string>
		 <string name="get_started">To get started, log in using Facebook</string>
    <string name="spinner_title">Select Service</string>
		<string name="method">Login Method</string>
		<string name="Choose">Choose Method</string>
		<string name="update">Update location</string>
		<string name="receive" translatable="false">
			Receive Location
		</string>
		<string name="fblogout">FB Logout</string>
		<string name="fbshare">Share on FB</string>
		<string name="Register" tools:ignore="MissingTranslation">Register</string>
		<string name="Search">Search</string>
		<string name="Find">Find</string>
		
		<string name="Motive">Motive</string>
		<string name="Uploadlocation">Upload location></string>
		<string name="Nearbyservices">Nearby services</string>
		<string name="facebook_app_id">781030301944398</string>
	
</resources>