<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/wallet_holo_blue_light"
    android:layout_gravity="center"
     >

    <ImageView
        android:id="@+id/profilepic"
        android:layout_width="90dp"
        android:layout_height="88dp"
        android:visibility="visible"
        android:clickable="true" />

    <TextView
        android:id="@+id/appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Uploadlocation"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/serviceinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="true"
        android:hint="@string/Motive" >

        <requestFocus />
    </EditText>
     <Spinner
        android:id="@+id/spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/spinner_title"
    />
    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/Uploadlocation" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nearbyservices"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/Find" />

    <TextView
        android:id="@+id/loctv"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:text="Location is:"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
        
    </com.google.android.gms.ads.AdView>
       
</LinearLayout>