<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background = "@drawable/player"
    tools:context=".MainActivity" >

   <EditText
       android:id="@+id/editText1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/textView1"
       android:layout_below="@+id/textView1"
       android:layout_marginTop="26dp"
       android:ems="10"
       android:inputType="text" />

   <Button
       android:id="@+id/login"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
       android:layout_alignParentLeft="true"
       android:onClick="login"
       android:text="@string/LoginGet" />

   <TextView
       android:id="@+id/textView4"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/mobi"
       android:layout_below="@+id/editText2"
       android:layout_marginTop="28dp"
       android:text="@string/mobile_num" />

   <EditText
       android:id="@+id/editText2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/textView2"
       android:layout_below="@+id/textView2"
       android:layout_marginTop="28dp"
       android:ems="10"
       android:inputType="textPassword" />

   <TextView
       android:id="@+id/textView1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/login"
       android:layout_alignParentTop="true"
       android:layout_marginTop="17dp"
       android:text="@string/Username" />

   <TextView
       android:id="@+id/textView2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignRight="@+id/textView1"
       android:layout_below="@+id/editText1"
       android:layout_marginTop="36dp"
       android:text="@string/Password" />

   <EditText
       android:id="@+id/mobi"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignRight="@+id/editText2"
       android:layout_below="@+id/textView4"
       android:layout_marginTop="34dp"
       android:ems="10"
       android:inputType="none" />

   <Button
       android:id="@+id/button1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBottom="@+id/login"
       android:layout_alignRight="@+id/mobi"
       android:onClick="register"
       android:text="@string/Register" />

   <com.google.android.gms.common.SignInButton
       android:id="@+id/googlesignin"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_above="@+id/login"
       
       android:layout_alignLeft="@+id/editText2" >
   </com.google.android.gms.common.SignInButton>

   <Button
       android:id="@+id/button2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_above="@+id/button1"
       android:layout_alignRight="@+id/editText1"
       android:onClick="gsignout"
       android:text="SignOut" />
   <fragment android:name="com.hemant.locaroid.SelectionFragment"
          android:id="@+id/selectionFragment"
          android:layout_width="match_parent"
          android:layout_height="match_parent" />
    <fragment android:name="com.hemant.locaroid.Fbauth"
          android:id="@+id/facebooklayout"
          android:layout_width="match_parent"
          android:layout_height="match_parent" />
     <fragment android:name="com.hemant.locaroid.UserSettingsFragment"
          android:id="@+id/userSettingsFragment"
          android:layout_width="match_parent"
          android:layout_height="match_parent" />
       
</RelativeLayout>